--- a/reports/raport_emisja.qmd
+++ b/reports/raport_emisja.qmd
@@ -147,4 +147,4 @@ Hybrydowy | 89 648.62 | 7 322.71
 ## Podsumowanie
 
 Wydaje mi się, że teraz wszystko jest tutaj policzone poza tymi średnimi kilometrami
-dla UW, które są w Excelach. 
+dla UW, które są w Excelach. To też są średnie tygodniowe dla całego UW.
